# say-week1-knn

./: .gitignore  pyproject.toml
src/say_week1_knn/: main.py
src/say_week1_knn/data/: model.pkl
