[project]
name = "say-week1-knn"
version = "0.1.0"
description = "Week1 program - using scikit-learn KNeighborsClassifier"
authors = [
    {name = "NishNovae", email = "raecrowned@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true
